chore: add cloudflare Analytics

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,5 +78,6 @@
             }
         </style>
     </noscript>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "0e8ea8c607c14e63990ea162c2f6c93d"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
